--- a/Vacation Manager/Vacation Manager/MVCApp/appsettings.json
+++ b/Vacation Manager/Vacation Manager/MVCApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VacationManagerDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=MVCApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
